fixed layout issues with mobile view of hard skills

--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -65,11 +65,6 @@
     border-radius: 0.5em;
 }
 
-/* .hard:hover .level {
-    position: relative;
-    bottom: -1.5em;
-} */
-
 .certificate {
     width: 100%;
     display: inline-grid;
@@ -299,6 +294,7 @@ footer {
         min-width: 18.5%;
     }
 }
+
 @media (max-width: 1200px) {
     .projects {
         grid-template-columns: 33% 33% 33%;
@@ -355,6 +351,7 @@ footer {
         height: 100%;
     }
 }
+
 @media (max-width: 992px) {
     .projects {
         grid-template-columns: 50% 50%;
@@ -382,6 +379,7 @@ footer {
         height: fit-content;
     }
 }
+
 @media (max-width: 768px) {
     .projects {
         grid-template-columns: 100%;
@@ -457,6 +455,7 @@ footer {
         width: 50%;
     }
 }
+
 @media (max-width: 576px) {
     .hard {
         width: 29.5%;
@@ -495,10 +494,18 @@ footer {
         width: 75%;
     }
 }
+
 @media (max-width: 480px) {
+    .set {
+        display: inline-grid;
+        width: 100%;
+        grid-template-columns: 50% 50%;
+    }
+
     .hard {
-        width: 43%;
-        min-width: 43%;
+        width: 95%;
+        min-width: 95%;
+        max-width: 95%;
     }
 
     .tech {
@@ -506,7 +513,6 @@ footer {
     }
 
     .project {
-        width: 100%;
         height: 22em;
     }
 }
